<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/modifyTaskBackground"
    tools:context="com.comp3617.assignment2.EditTaskActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/task_tile"
        android:clickable="true"
        android:focusableInTouchMode="true" >

        <CheckBox
            android:id="@+id/finishBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.05" />

        <EditText
            android:id="@+id/taskName"
            style="@style/Widget.AppCompat.AutoCompleteTextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.32"
            android:background="@android:color/transparent"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/task_text"
            android:textSize="16sp"
            android:padding="10dp"
            android:hint="@string/task_name"
            tools:text="@string/task_name" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/task_tile">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_duedate" />

        <TextView
            android:id="@+id/dueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.03"
            android:paddingLeft="5dp"
            android:text="@string/due"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dueDate"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="0.89"
            android:gravity="center|end"
            tools:text="@string/placeholder_date" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/modifyTaskBackground"
        android:orientation="vertical">

        <Button
            android:id="@+id/emailBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/task_tile"
            android:text="@string/email"
            android:textColor="#1ebcf0" />
        <Button
            android:id="@+id/reminderBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/task_tile"
            android:text="@string/set_a_reminder"
            android:layout_marginTop="5dp"
            android:textColor="@color/task_button_text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/save"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="40dp"
            android:layout_weight="1"
            android:background="@color/task_save_button"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancelAndDelete"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/task_cancel_delete_button"
            android:text="@string/delete" />
    </LinearLayout>

</LinearLayout>

